istio-manifests/MicroService/VirtualService/AuthVirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: auth
  namespace: rgrpc-dev
spec:
  gateways:
    - rgrpc
  hosts:
    - dev.api.your-domain.com
  http:
    - match:
        - uri:
            prefix: /auth
      route:
        - destination:
            host: auth
            port:
              number: 9001
