istio-manifests/MicroService/VirtualService/UserVirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user
  namespace: rgrpc-dev
spec:
  gateways:
    - rgrpc
  hosts:
    - dev.api.your-domain.com
  http:
    - match:
        - uri:
            prefix: /user
      route:
        - destination:
            host: user
            port:
              number: 9001
